# lu_df_ts_project

./: CMakeLists.txt
shared/: CMakeLists.txt
shared/include/: Constants.h  common.h  config_mgr.h  constants.h  packet_structure.h  tcp_session.h  touch_structure.h
shared/src/: config_mgr.cpp  packet_structure.cpp  tcp_session.cpp
ts_receiver/: CMakeLists.txt
ts_receiver/include/: tcp_ts_server.h  touch_control.h
ts_receiver/include/handlers/: TouchHandler.h
ts_receiver/include/windows_impl/: mouse_injector.h  touch_injector.h
ts_receiver/src/: Main.cpp  main.cpp  tcp_ts_server.cpp  touch_control.cpp
ts_receiver/src/handlers/linux_implementation/: TouchHandler.cpp
ts_receiver/src/handlers/win_implementation/: TouchHandler.cpp
ts_receiver/src/linux/: touch_control.cpp
ts_receiver/src/linux_impl/: touch_handler.cpp
ts_receiver/src/windows/: touch_control.cpp
ts_receiver/src/windows_impl/: mouse_injector.cpp  touch_injector.cpp
ts_sender/: CMakeLists.txt
ts_sender/include/: PacketSender.h  tcp_ts_client.h  touch_event_parser.h
ts_sender/include/linux_impl/: dev_monitor.h
ts_sender/src/: Main.cpp  PacketSender.cpp  main.cpp  tcp_ts_client.cpp  touch_event_parser.cpp
ts_sender/src/linux_impl/: dev_monitor.cpp
